fixed scrollbar px bug

--- a/styles/style.css
+++ b/styles/style.css
@@ -512,7 +512,7 @@ table th {
 
 /* width */
 ::-webkit-scrollbar {
-  width: 15px;
+  width: 1px;
 }
 
 /* Track */
